--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,18 @@
         </dependency>
 
 
+        <!--btrace-->
+        <dependency>
+            <groupId>com.sun.tools.btrace</groupId>
+            <artifactId>btrace-agent</artifactId>
+            <version>1.2.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.tools.btrace</groupId>
+            <artifactId>btrace-boot</artifactId>
+            <version>1.2.3</version>
+        </dependency>
+        <!--btrace-->
 
 
     </dependencies>
